--- a/app/views/pages/estatisticaadm.ejs
+++ b/app/views/pages/estatisticaadm.ejs
@@ -21,7 +21,7 @@
             </a>
             <img src="imagens/logo.png" alt="Logo">
             <a href="/menuadm">
-                <img src="/imagens/icone sem cadastro.png" alt="Perfil" class="perfil">
+                <img src="/imagens/icone sem cadastro.png" alt="Perfil" class="perfil maria">
             </a>
         </nav>
     </header>
@@ -44,7 +44,7 @@
             </nav>
             <section class="nav-icons">
                 <input type="text" placeholder="Buscar...">
-                <a href="/menuadm"><img src="/imagens/icone sem cadastro.png"></a>
+                <a href="/menuadm"><img src="/imagens/icone sem cadastro.png" class="maria"></a>
             </section>
         </section>
     </header>
